fix to-top button z-index bug (mobile only)

--- a/includes/css/tec_default.css
+++ b/includes/css/tec_default.css
@@ -52,6 +52,7 @@ img#tec-to-top {
     right: 35px;
     transition: all 0.2s ease;
     cursor: pointer;
+    z-index: 10;
 }
 
 /*Dark Mode Defaults*/
